# V2Engine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  cmake_install.cmake  compileShader.bat  compileShaders.py  lapCompile.sh
libraries/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
libraries/glfw-3.4/src/: Makefile
models/textures/: background.tga  background_ddn.tga  chain_texture.tga  chain_texture_ddn.tga  lion.tga  lion2_ddn.tga  lion_ddn.tga  spnza_bricks_a_ddn.tga  spnza_bricks_a_diff.tga  sponza_arch_ddn.tga  sponza_arch_diff.tga  sponza_ceiling_a_ddn.tga  sponza_ceiling_a_diff.tga  sponza_column_a_ddn.tga  sponza_column_a_diff.tga  sponza_column_b_ddn.tga  sponza_column_b_diff.tga  sponza_column_c_ddn.tga  sponza_column_c_diff.tga  sponza_curtain_blue_diff.tga  sponza_curtain_ddn.tga  sponza_curtain_diff.tga  sponza_curtain_green_diff.tga  sponza_details_ddn.tga  sponza_details_diff.tga  sponza_fabric_blue_diff.tga  sponza_fabric_ddn.tga  sponza_fabric_diff.tga  sponza_fabric_green_diff.tga  sponza_flagpole_ddn.tga  sponza_flagpole_diff.tga  sponza_floor_a_ddn.tga  sponza_floor_a_diff.tga  sponza_roof_ddn.tga  sponza_roof_diff.tga  sponza_thorn_ddn.tga  sponza_thorn_diff.tga  vase_ddn.tga  vase_dif.tga  vase_hanging.tga  (+4 more)
src/: #Camera.hpp#  #VkBGraphicsPipeline.hpp#  #VkBLightProbes.hpp#  #main.cpp#  BVH.cpp  BVH.hpp  Camera.hpp  DebugConsole.cpp  DebugConsole.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  DeviceSelection.cpp  DeviceSelection.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  Input.hpp  Material.cpp  Material.hpp  MeshIO.cpp  MeshIO.hpp  OBJLoader.cpp  OBJLoader.hpp  RadianceCascade3D.cpp  RadianceCascade3D.hpp  RadianceCascadeSS.cpp  RadianceCascadeSS.hpp  SSAOPass.cpp  SSAOPass.hpp  TextureAtlas.cpp  TextureAtlas.hpp  Vertex.hpp  VkBBuffer.cpp  VkBBuffer.hpp  VkBCommandBuffer.cpp  VkBCommandBuffer.hpp  VkBCommandPool.hpp  VkBComputePipeline.cpp  VkBComputePipeline.hpp  VkBDrawCommandBuffer.cpp  VkBDrawCommandBuffer.hpp  (+31 more)
src/shaders/: BVH.comp  DeferredHelpers.comp  SSAO.comp  SSAO.spv  SSAODepthDeInterleave.comp  SSAODepthDeInterleave.spv  SSAODepthInterleave.comp  SSAODepthInterleave.spv  SSAOMultiPass.comp  SSAOMultiPass.spv  SSRadianceCascade.comp  SSRadianceCascade.spv  Vertex.comp  debugLineFrag.spv  debugLineVert.spv  deferredCompositeFrag.frag  deferredCompositeFrag.spv  deferredCompositeVert.spv  deferredCompositeVert.vert  deferredFrag.frag  deferredFrag.spv  deferredVert.spv  deferredVert.vert  frag.spv  line.frag  line.vert  lineFrag.spv  lineVert.spv  lineVert.vert  ray.comp  ray.frag  ray.spv  rayCascade.comp  rayHelpers.comp  rayProbe.comp  rayProbe.spv  stencilReflect.comp  stencilReflect.spv  triangle.frag  triangle.ray  (+6 more)
src/shaders/processed/: SSAODepthDeInterleave_.comp  SSAODepthInterleave_.comp  SSAOMultiPass_.comp  SSAO_.comp  SSRadianceCascade_.comp  debugLineFrag_.frag  debugLineVert_.vert  deferredCompositeFrag_.frag  deferredCompositeVert_.vert  deferredFrag_.frag  deferredVert_.vert  lineVert_.vert  rayProbe_.comp  ray_.comp  (+2 more)
